# NTest

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: ci.yaml
cmake/toolchains/: mingw64.cmake
examples/: basic_tests.cpp
include/: AnsiColor.h  NTest.h
src/: main.cpp
tests/: self_tests.cpp
tools/: format_check.sh
